--- a/single.html
+++ b/single.html
@@ -264,7 +264,7 @@
 
       </div>
 
-      <div class="col-md-3 col-sm-12" style="margin-top: 30px;">
+      <div class="col-md-3 col-sm-12 right-rail" style="margin-top: 30px;">
 
         <div class="animate-box" data-animate-effect="fadeInLeft">
           <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
