--- a/videos.html
+++ b/videos.html
@@ -141,17 +141,17 @@
             <span class="sr-only">(current)</span>
           </a>
         </div> -->
-        
+
         <div class="row no-gutters" style="margin-left: 15px">
-        <ul class="list-unstyled">
-          <li>
-            <img src="images/feat-content.jpg" alt="" class="img-fluid">
-            <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-            <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
-            <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
-          </li>
-        </ul>
-      </div>
+          <ul class="list-unstyled">
+            <li>
+              <img src="images/feat-content.jpg" alt="" class="img-fluid">
+              <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+              <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct, 02 2018</p>
+              <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
+            </li>
+          </ul>
+        </div>
         <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-responsive table-bordered">
           <tbody>
             <tr>
@@ -216,23 +216,22 @@
             </tr>
           </tbody>
         </table>
-
-        <div class="row mx-0">
-          <div class="col-12 text-center pb-4 pt-4">
-            <a href="#" class="btn_mange_pagging">
-              <i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
-            <a href="#" class="btn_pagging">1</a>
-            <a href="#" class="btn_pagging">2</a>
-            <a href="#" class="btn_pagging">3</a>
-            <a href="#" class="btn_pagging">...</a>
-            <a href="#" class="btn_mange_pagging">Next
-              <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
+        <div class="container">
+          <div class="row mx-0">
+            <div class="col-12 text-center pb-4 pt-4">
+              <a href="#" class="btn_mange_pagging">
+                <i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
+              <a href="#" class="btn_pagging">2</a>
+              <a href="#" class="btn_pagging">...</a>
+              <a href="#" class="btn_mange_pagging">Next
+                <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
+            </div>
           </div>
         </div>
 
       </div>
 
-      <div class="col-md-3 col-sm-12" style="margin-top: 30px;">
+      <div class="col-md-3 col-sm-12 right-rail" style="margin-top: 30px;">
 
         <div class="animate-box" data-animate-effect="fadeInLeft">
           <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
