--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
               </a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="search.html"><i class="fa fa-search"></i>
+              <a class="nav-link" href="search.html">
+                <i class="fa fa-search"></i>
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -115,7 +116,7 @@
                   </a>
                   <div>
                     <a href="single.html" class="d-block fh5co_small_post_heading">
-                      <span class="">PUBG</span>
+                      <span class="fa-hover">PUBG</span>
                     </a>
                     <div class="c_g">
                       Lorum Ispum Description
@@ -133,7 +134,7 @@
                   </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
-                      <span class="">Event 2</span>
+                      <span class=fa-hover>Event 2</span>
                     </a>
                     <div class="c_g">
                       Lorum Ispum Description
@@ -151,7 +152,7 @@
                   </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
-                      <span class="">Event 3</span>
+                      <span class=fa-hover>Event 3</span>
                     </a>
                     <div class="c_g">
                       Lorum Ispum Description
@@ -169,7 +170,7 @@
                   </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
-                      <span class="">Event 4</span>
+                      <span class=fa-hover>Event 4</span>
                     </a>
                     <div class="c_g">
                       Lorum Ispum Description
@@ -198,7 +199,7 @@
                   </a>
                   <div>
                     <a href="videos.html" class="d-block fh5co_small_post_heading">
-                      <span class="">Video 1</span>
+                      <span class=fa-hover>Video 1</span>
                     </a>
                     <div class="c_g">
                       Lorum Ispum Description
@@ -216,7 +217,7 @@
                   </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
-                      <span class="">Video 2</span>
+                      <span class=fa-hover>Video 2</span>
                     </a>
                     <div class="c_g">
                       Lorum Ispum Description
@@ -234,7 +235,7 @@
                   </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
-                      <span class="">Video 3</span>
+                      <span class=fa-hover>Video 3</span>
                     </a>
                     <div class="c_g">
                       Lorum Ispum Description
@@ -252,7 +253,7 @@
                   </a>
                   <div>
                     <a href="#" class="d-block fh5co_small_post_heading">
-                      <span class="">Video 4</span>
+                      <span class=fa-hover>Video 4</span>
                     </a>
                     <div class="c_g">
                       Lorum Ispum Description
@@ -404,18 +405,18 @@
             <li>
               <a href="games.html" class="footer_last_part_menu">Games</a>
             </li>
+            <li>
+              <a href="teams.html" class="footer_last_part_menu">Teams</a>
+            </li>
+            <li>
+              <a href="players.html" class="footer_last_part_menu">Players</a>
+            </li>
           </ul>
         </div>
         <div class="col-12 col-md-2">
           <ul class="list-unstyled">
             <li>
               <hr class="short">
-            </li>
-            <li>
-              <a href="teams.html" class="footer_last_part_menu">Teams</a>
-            </li>
-            <li>
-              <a href="players.html" class="footer_last_part_menu">Players</a>
             </li>
             <li>
               <a href="about.html" class="footer_last_part_menu">About</a>
