--- a/videos.html
+++ b/videos.html
@@ -149,7 +149,7 @@
               <img src="images/feat-content.jpg" alt="" class="img-fluid">
             </li>
             <li class="d-inline-block" style="font-size: 16px; margin-right: 15px">
-              <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Title Lorum Ipsum Dolet.</p>
+              <p style="font-weight: 500; font-size: 22px; margin-top: 8px">Title Lorum Ipsum Dolet.</p>
             </li>
             <li class="d-inline-block pull-right" style="font-size: 16px; margin-left: 30px; margin-top: 15px; color: #9d9d9d">
               <i class="fa fa-twitter fa-hover"></i>
@@ -161,8 +161,8 @@
               <i class="fa fa-envelope fa-hover"></i>
             </li>
             <li style="margin-top: -15px">
-              <p style="font-weight: 500; font-size: 16px; margin-top: 8px">Description Lorum Ipsum Dolet.</p>
-              <p style="font-weight: 300; font-size: 14px; margin-top: -20px">Oct, 02 2018</p>
+              <p style="font-weight: 300; font-size: 16px; margin-top: 8px">Description Lorum Ipsum Dolet.</p>
+              <p style="font-weight: 300; font-size: 14px; margin-top: -20px">Oct 02, 2018</p>
               <p style="font-weight: 300; font-size: 14px; margin-top: -20px">2.2M views</p>
             </li>
           </ul>
