--- a/teams.html
+++ b/teams.html
@@ -133,7 +133,7 @@
     <div class="container animate-box">
       <div>
         <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
-          PUBG Teams
+          Teams
         </div>
       </div>
       <div class="owl-carousel owl-theme" id="slider4">
@@ -431,104 +431,104 @@
   </div>
 
   <div class="container-fluid fh5co_footer_right_reserved">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-md-6 py-4 Reserved"> © Copyright 2018, All rights reserved.</div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-6">
-            <!-- <div class="text-center d-inline-block">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-6 py-4 Reserved">© 2018, All rights reserved.</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <!-- <div class="text-center d-inline-block">
                 <a class="fh5co_display_table">
                   <div class="fh5co_verticle_middle">
                     <i class="fa fa-search"></i>
                   </div>
                 </a>
               </div> -->
-            <div class="text-center d-inline-block">
-              <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-twitter"></i>
-                </div>
-              </a>
-            </div>
-            <div class="text-center d-inline-block">
-              <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-facebook"></i>
-                </div>
-              </a>
-            </div>
-            <div class="text-center d-inline-block">
-              <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-youtube"></i>
-                </div>
-              </a>
-            </div>
-            <div class="text-center d-inline-block">
-              <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-envelope"></i>
-                </div>
-              </a>
-            </div>
+          <div class="text-center d-inline-block">
+            <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-twitter"></i>
+              </div>
+            </a>
           </div>
-        </div>
-  
-        <div class="row" style="padding-bottom: 60px">
-          <div class="col-12 col-md-2">
-            <ul class="list-unstyled">
-              <li>
-                <hr class="short">
-              </li>
-              <li>
-                <a href="index.html" class="footer_last_part_menu">Home</a>
-              </li>
-              <li>
-                <a href="news.html" class="footer_last_part_menu">Blog</a>
-              </li>
-              <li>
-                <a href="events.html" class="footer_last_part_menu">Events</a>
-              </li>
-              <li>
-                <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
-              </li>
-              <li>
-                <a href="games.html" class="footer_last_part_menu">Games</a>
-              </li>
-              <li>
-                <a href="teams.html" class="footer_last_part_menu">Teams</a>
-              </li>
-              <li>
-                <a href="players.html" class="footer_last_part_menu">Players</a>
-              </li>
-            </ul>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-facebook"></i>
+              </div>
+            </a>
           </div>
-          <div class="col-12 col-md-2">
-            <ul class="list-unstyled">
-              <li>
-                <hr class="short">
-              </li>
-              <li>
-                <a href="about.html" class="footer_last_part_menu">About</a>
-              </li>
-              <li>
-                <a href="contact.html" class="footer_last_part_menu">Contact</a>
-              </li>
-              <li>
-                <a href="terms.html" class="footer_last_part_menu">Terms</a>
-              </li>
-              <li>
-                <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
-              </li>
-              <li>
-                <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
-              </li>
-            </ul>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-youtube"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-envelope"></i>
+              </div>
+            </a>
           </div>
         </div>
       </div>
+
+      <div class="row" style="padding-bottom: 60px">
+        <div class="col-12 col-md-2">
+          <ul class="list-unstyled">
+            <li>
+              <hr class="short">
+            </li>
+            <li>
+              <a href="index.html" class="footer_last_part_menu">Home</a>
+            </li>
+            <li>
+              <a href="news.html" class="footer_last_part_menu">Blog</a>
+            </li>
+            <li>
+              <a href="events.html" class="footer_last_part_menu">Events</a>
+            </li>
+            <li>
+              <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
+            </li>
+            <li>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
+            </li>
+            <li>
+              <a href="teams.html" class="footer_last_part_menu">Teams</a>
+            </li>
+            <li>
+              <a href="players.html" class="footer_last_part_menu">Players</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-12 col-md-2">
+          <ul class="list-unstyled">
+            <li>
+              <hr class="short">
+            </li>
+            <li>
+              <a href="about.html" class="footer_last_part_menu">About</a>
+            </li>
+            <li>
+              <a href="contact.html" class="footer_last_part_menu">Contact</a>
+            </li>
+            <li>
+              <a href="terms.html" class="footer_last_part_menu">Terms</a>
+            </li>
+            <li>
+              <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+  </div>
 
   <div class="gototop js-top">
     <a href="#" class="js-gotop">
