--- a/ppa/index.html
+++ b/ppa/index.html
@@ -35,29 +35,28 @@
             <img src="images/PKA-Brand_Logo-Flat.svg" alt="img" class="mobile_logo_width" />
           </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Take Action
+                <a class="nav-link" href="index.html">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="news.html">News
+                <a class="nav-link" href="about.html">About
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="donate.html">Donate
+                <a class="nav-link" href="terms.html">Terms
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="search.html">
-                  <i class="fa fa-search"></i>
+                <a class="nav-link" href="privacy.html">Privacy
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-            </ul> -->
+            </ul>
           </div>
         </nav>
       </div>
@@ -86,9 +85,9 @@
             <div class="col-md-8 py-4">
               <p>
                 <span class="h2" style="color: #9d9d9d; font-weight: 300">The Poker Alliance</span> (PA) is an LLC organization representing American poker players with the goal of
-                establishing a safe and secure place to play poker. Formed in 2005 as the Poker Players Alliance, a non-profit membership organization of nearly 1 million poker
-                players, the PA continues to serve as the unified voice on behalf of Americans’ right to play poker in all
-                its forms.</p>
+                establishing a safe and secure place to play poker. Formed in 2005 as the Poker Players Alliance, a non-profit
+                membership organization of nearly 1 million poker players, the PA continues to serve as the unified voice
+                on behalf of Americans’ right to play poker in all its forms.</p>
               <p>Subscribe to the PPA mailing list. This is the best way to get the latest news and action alerts on the #fight4poker.
                 Also, you can connect with the PPA on Facebook and Twitter. We are one of the best follows in the poker world.
                 Not only will you get breaking news, but you will get daily updates on our activities and where we are making
@@ -102,10 +101,12 @@
                 PPA today so we have the resources to continue working hard on your behalf.</p>
               <p>As the recognized expert on the game of poker, the PA is also an established legal resource, taking the argument
                 that poker is a game of skill directly to state and federal courts.</p>
-                <hr class="short" style="margin-left: 0">
-                <p style="font-size: 32px; color: #9d9d9d; font-weight: 300"><i class="fa fa-envelope"></i>  For more information contact:<br>
-                  <a href="mailto:webmaster@example.com">Placeholder Tim</a>
-                </p>
+              <hr class="short" style="margin-left: 0">
+              <p style="font-size: 32px; color: #9d9d9d; font-weight: 300">
+                <i class="fa fa-envelope"></i> For more information contact:
+                <br>
+                <a href="mailto:webmaster@example.com">Placeholder Tim</a>
+              </p>
             </div>
             <div class="col-md-4 py-4">
               <p style="font-size: 22px">PA Success stories</p>
@@ -120,10 +121,9 @@
               </ul>
               <hr class="short" style="margin-left: 0">
               <p>
-                PA is supported by sponsorships and donations from the poker community which give us the ability to
-                  fight for your poker rights. Our priority is to work towards solutions that put poker consumers and poker
-                  competition first. With your help, we can have safe and fun live and online poker (and online gaming) across
-                  the country.</p>
+                PA is supported by sponsorships and donations from the poker community which give us the ability to fight for your poker
+                rights. Our priority is to work towards solutions that put poker consumers and poker competition first. With
+                your help, we can have safe and fun live and online poker (and online gaming) across the country.</p>
               <form class="needs-validation">
                 <div class="form-row pb-4">
                   <input type="text" class="form-control" id="#" placeholder="First name" value="">
@@ -131,10 +131,65 @@
                 <div class="form-row pb-4">
                   <input type="text" class="form-control" id="#" placeholder="Last name" value="">
                 </div>
-                <div class="form-row">
+                <div class="form-row pb-4">
                   <input type="text" class="form-control" id="#" placeholder="Email">
                 </div>
-                <div class="form-group">
+                <div class="form-row pb-4">
+                  <div class="custom-select" style="width:100%;">
+                    <select>
+                      <option value="AL">Alabama</option>
+                      <option value="AK">Alaska</option>
+                      <option value="AZ">Arizona</option>
+                      <option value="AR">Arkansas</option>
+                      <option value="CA">California</option>
+                      <option value="CO">Colorado</option>
+                      <option value="CT">Connecticut</option>
+                      <option value="DE">Delaware</option>
+                      <option value="DC">District Of Columbia</option>
+                      <option value="FL">Florida</option>
+                      <option value="GA">Georgia</option>
+                      <option value="HI">Hawaii</option>
+                      <option value="ID">Idaho</option>
+                      <option value="IL">Illinois</option>
+                      <option value="IN">Indiana</option>
+                      <option value="IA">Iowa</option>
+                      <option value="KS">Kansas</option>
+                      <option value="KY">Kentucky</option>
+                      <option value="LA">Louisiana</option>
+                      <option value="ME">Maine</option>
+                      <option value="MD">Maryland</option>
+                      <option value="MA">Massachusetts</option>
+                      <option value="MI">Michigan</option>
+                      <option value="MN">Minnesota</option>
+                      <option value="MS">Mississippi</option>
+                      <option value="MO">Missouri</option>
+                      <option value="MT">Montana</option>
+                      <option value="NE">Nebraska</option>
+                      <option value="NV">Nevada</option>
+                      <option value="NH">New Hampshire</option>
+                      <option value="NJ">New Jersey</option>
+                      <option value="NM">New Mexico</option>
+                      <option value="NY">New York</option>
+                      <option value="NC">North Carolina</option>
+                      <option value="ND">North Dakota</option>
+                      <option value="OH">Ohio</option>
+                      <option value="OK">Oklahoma</option>
+                      <option value="OR">Oregon</option>
+                      <option value="PA">Pennsylvania</option>
+                      <option value="RI">Rhode Island</option>
+                      <option value="SC">South Carolina</option>
+                      <option value="SD">South Dakota</option>
+                      <option value="TN">Tennessee</option>
+                      <option value="TX">Texas</option>
+                      <option value="UT">Utah</option>
+                      <option value="VT">Vermont</option>
+                      <option value="VA">Virginia</option>
+                      <option value="WA">Washington</option>
+                      <option value="WV">West Virginia</option>
+                      <option value="WI">Wisconsin</option>
+                      <option value="WY">Wyoming</option>
+                    </select>
+                  </div>
                 </div>
                 <button class="btn btn-primary" type="submit">SUBMIT</button>
               </form>
@@ -256,6 +311,84 @@
     if (!navigator.userAgent.match(/Android|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i)) {
       $(window).stellar();
     }
+
+    // Custom Select
+
+    var x, i, j, selElmnt, a, b, c;
+    /*look for any elements with the class "custom-select":*/
+    x = document.getElementsByClassName("custom-select");
+    for (i = 0; i < x.length; i++) {
+      selElmnt = x[i].getElementsByTagName("select")[0];
+      /*for each element, create a new DIV that will act as the selected item:*/
+      a = document.createElement("DIV");
+      a.setAttribute("class", "select-selected");
+      a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+      x[i].appendChild(a);
+      /*for each element, create a new DIV that will contain the option list:*/
+      b = document.createElement("DIV");
+      b.setAttribute("class", "select-items select-hide");
+      for (j = 1; j < selElmnt.length; j++) {
+        /*for each option in the original select element,
+        create a new DIV that will act as an option item:*/
+        c = document.createElement("DIV");
+        c.innerHTML = selElmnt.options[j].innerHTML;
+        c.addEventListener("click", function (e) {
+          /*when an item is clicked, update the original select box,
+          and the selected item:*/
+          var y, i, k, s, h;
+          s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+          h = this.parentNode.previousSibling;
+          for (i = 0; i < s.length; i++) {
+            if (s.options[i].innerHTML == this.innerHTML) {
+              s.selectedIndex = i;
+              h.innerHTML = this.innerHTML;
+              y = this.parentNode.getElementsByClassName("same-as-selected");
+              for (k = 0; k < y.length; k++) {
+                y[k].removeAttribute("class");
+              }
+              this.setAttribute("class", "same-as-selected");
+              break;
+            }
+          }
+          h.click();
+        });
+        b.appendChild(c);
+      }
+      x[i].appendChild(b);
+      a.addEventListener("click", function (e) {
+        /*when the select box is clicked, close any other select boxes,
+        and open/close the current select box:*/
+        e.stopPropagation();
+        closeAllSelect(this);
+        this.nextSibling.classList.toggle("select-hide");
+        this.classList.toggle("select-arrow-active");
+      });
+    }
+
+    function closeAllSelect(elmnt) {
+      /*a function that will close all select boxes in the document,
+      except the current select box:*/
+      var x, y, i, arrNo = [];
+      x = document.getElementsByClassName("select-items");
+      y = document.getElementsByClassName("select-selected");
+      for (i = 0; i < y.length; i++) {
+        if (elmnt == y[i]) {
+          arrNo.push(i)
+        } else {
+          y[i].classList.remove("select-arrow-active");
+        }
+      }
+      for (i = 0; i < x.length; i++) {
+        if (arrNo.indexOf(i)) {
+          x[i].classList.add("select-hide");
+        }
+      }
+    }
+    /*if the user clicks anywhere outside the select box,
+    then close all select boxes:*/
+    document.addEventListener("click", closeAllSelect);
+
+    // end Custom Select
 
   </script>
 
